--- a/estilo.css
+++ b/estilo.css
@@ -6,3 +6,11 @@ input[type=text]{
   color: white;
   
   }
+  
+  textarea{
+    width: 100%;
+    border-radius: 5px;
+    background-color:darkcyan ;
+    color: white;
+    text-align: center;
+  }
