--- a/estilo.css
+++ b/estilo.css
@@ -6,11 +6,15 @@ input[type=text]{
   color: white;
   
   }
-  
+
   textarea{
     width: 100%;
     border-radius: 5px;
     background-color:darkcyan ;
     color: white;
     text-align: center;
+  }
+
+  ::placeholder{
+    color :white;
   }
